fix height on mobile bug

--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -7,6 +7,8 @@
   -o-animation: fadein $transition-duration-short;
   animation: fadein $transition-duration-short;
 
+  height: 100vh;
+
   &__headline-one {
     font-size: 4rem;
     cursor: default;
@@ -57,6 +59,9 @@
 
     &--list-item {
 
+      transform: translateY(0);
+      transition: transform $transition-duration-sorta-short linear;
+
       a {
         text-decoration: none;
         font-size: 1.75rem;
@@ -72,7 +77,6 @@
       }
 
       &:hover{
-        transition: transform $transition-duration-sorta-short linear;
         transform: translateY(-15%);
       }
     }
